--- a/client/angular.json
+++ b/client/angular.json
@@ -99,10 +99,10 @@
               "src/assets"
             ],
             "styles": [
-              "./node_modules/bootstrap/dist/css/bootstrap.min.css",
-              "./node_modules/ngx-bootstrap/datepicker/bs-datepicker.css",
+              "../node_modules/bootstrap/dist/css/bootstrap.min.css",
+              "../node_modules/ngx-bootstrap/datepicker/bs-datepicker.css",
               "src/styles.scss",
-              "./node_modules/font-awesome/css/font-awesome.min.css"
+              "../node_modules/font-awesome/css/font-awesome.min.css"
             ],
             "scripts": []
           }
