--- a/client/angular.json
+++ b/client/angular.json
@@ -33,7 +33,8 @@
             "styles": [
               "./node_modules/bootstrap/dist/css/bootstrap.min.css",
               "./node_modules/ngx-bootstrap/datepicker/bs-datepicker.css",
-              "src/styles.scss"
+              "src/styles.scss",
+              "./node_modules/ngx-toastr/toastr.css"
             ],
             "scripts": []
           },
@@ -102,7 +103,9 @@
               "../node_modules/bootstrap/dist/css/bootstrap.min.css",
               "../node_modules/ngx-bootstrap/datepicker/bs-datepicker.css",
               "src/styles.scss",
-              "../node_modules/font-awesome/css/font-awesome.min.css"
+              "../node_modules/font-awesome/css/font-awesome.min.css",
+              "../node_modules/ngx-toastr/toastr.css",
+              "src/styles.css"
             ],
             "scripts": []
           }
