--- a/client/angular.json
+++ b/client/angular.json
@@ -34,7 +34,8 @@
               "./node_modules/bootstrap/dist/css/bootstrap.min.css",
               "./node_modules/ngx-bootstrap/datepicker/bs-datepicker.css",
               "src/styles.scss",
-              "./node_modules/ngx-toastr/toastr.css"
+              "./node_modules/ngx-toastr/toastr.css",
+              "./node_modules/bootswatch/dist/united/bootstrap.min.css"
             ],
             "scripts": []
           },
