--- a/Infrastructure/Infrastructure.csproj
+++ b/Infrastructure/Infrastructure.csproj
@@ -6,6 +6,11 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.10"/>
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.10"/>
     <PackageReference Include="StackExchange.Redis" Version="2.2.11"/>
+    <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.2.0"/>
+    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="3.1.4"/>
+    <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="6.8.0"/>
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.8.0"/>
+    
   </ItemGroup>
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
